<?xml version="1.0"?>
<package format="2">
  <name>shunk_gripper_description</name>
  <version>0.1.0</version>
  <description>URDF model for the SCHUNK gripper</description>
  <maintainer email="menggu1234@naver.com">Myeong Jin Lee</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>rviz</depend>
</package>
